made blacklisted methods and fields configurable to support a broader range code coverage tools and similar